2006-10-22  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PersonView.py:  remove dead code
	* src/GrampsDb/_ReadGedcom.py: handle Legacy _PREF
	* src/DisplayModels/_PeopleModel.py: speed improvement on name

2006-10-21  Alex Roitman  <shura@gramps-project.org>
	* src/data/tips.xml.in (tip67): Escape angle bracket.

2006-10-20  Benny Malengier  <bm@cage.UGent.be>
	* src/DataViews/_PlaceView.py: Fix lattitude/longitude typo.
	* src/glade/gramps.glade: Swap the order of latt/long in UI.

2006-10-20  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/rel_pl.py: Typo.

2006-10-19  Piotr Czubaszek  <pioterus@gmail.com>
	* src/plugins/rel_pl.py: Polish relationship calculator.
	* src/plugins/Makefile.am (pkgdata_PYTHON): Add rel_pl.py

2006-10-18  Alex Roitman  <shura@gramps-project.org>
	* src/ViewManager.py (change_redo_label, change_redo_label):
	Translate labels.

2006-10-17  Don Allingham  <don@gramps-project.org>
	* src/plugins/Desbrowser.py: fix callback parameter list

2006-10-16  Alex Roitman  <shura@gramps-project.org>
	* src/Editors/_EditPerson.py (_given_focus_out_event): Convert to
	unicode before guessing gender.

2006-10-15  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_WriteGedcom.py: fix bad function call
	* src/glade/gramps.glade: consistent place name

2006-10-15  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/FanChart.py: Fix name display for gen 6 and 7

2006-10-11  Alex Roitman  <shura@gramps-project.org>
	* RELEASE: version 2.2.0rc1 is released.
	* configure.in: Bump up the version number.

2006-10-11  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/IndivComplete.py (write_person): Catch missing image
	files.

2006-10-11  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDisplay.py (help): Rename gramps-manual to gramps.
	* src/Filters/_FilterComboBox.py (set): Force unicode.

2006-10-11  Brian Matherly  <brian@gramps-project.org>
	* src/Mime/_WinMime.py: potential fix for #446
