@@ -1,3 +1,6 @@
+2006-10-23  Don Allingham  <don@gramps-project.org>
+	* src/ReportBase/_BareReportDialog.py: declare logger.
+
 2006-10-22  Don Allingham  <don@gramps-project.org>
 	* src/DataViews/_PersonView.py:  remove dead code
 	* src/GrampsDb/_ReadGedcom.py: handle Legacy _PREF
